JavaParser (#4)
* Parse into JSON

* New pipeline for java to XML

* Changing to use meta model serializer

* Write non-meta properties

* First pass serialization

* Running example, removed non-meta for now

* Removed empty list nodes

* Compute left and right

* Handle text content

* Intake file, deserializing...

* Write through of XMLToJavaParser

* Commented out line numbers, debugging null error

* Null error with types

* Fixed XML implementation, also have JSON as reference

* Parse orphaned comments, need to encode it appropriately

* Encode and decode orphan comments, not pretty printing

* With line numbers orphan comments show up (in the wrong place but they show up)

* Rearranged for more tests